fixed animation icon; adjusted project 2 spacing and finalized project 2 features

--- a/assets/styles/modules/_feature.css
+++ b/assets/styles/modules/_feature.css
@@ -32,10 +32,11 @@
     top: 0;
     width: 2.5em;
     height: 2.5em;
+    color: $mainOrange;
     stroke-width: 1.5;
     stroke-linecap: round; 
     stroke-linejoin: round;
-    stroke: $mainOrange;
+    stroke: currentColor;
     fill: none;
   }
 
